@@ -1,0 +1,55 @@
+<printer id="printer/HP-OfficeJet_R40">
+  <make>HP</make>
+  <model>OfficeJet R40</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+    <consumables>
+    <!--no comments--><!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>http://www.hp.com/cposupport/eschome.html</url>
+  <lang>
+    <pcl level="3"/><!--no pjl-->
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+    <parallel>
+      <commandset>MLC,PCL,PML,SCL</commandset>
+      <description>Hewlett-Packard OfficeJet R40</description>
+      <manufacturer>HEWLETT-PACKARD</manufacturer>
+      <model>OFFICEJET R40</model>
+    </parallel>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>hpijs-rss</driver>
+  <!--verified--><!--no "contrib_url"-->
+  <comments>
+    <en>
+    Multifunction device: printer/scanner/copier.&lt;p&gt;
+
+    To get its maximum quality, use the &quot;hpijs&quot;
+    driver.&lt;p&gt;
+
+    Prints also reasonably well with various &quot;cdj...&quot;,
+    &quot;gimp-print&quot;/&quot;stp&quot;, or
+    &quot;pcl3&quot;/&quot;hpdj&quot; drivers.&lt;p&gt;
+
+    Scanning works using the &lt;a
+    href=&quot;http://hpoj.sourceforge.net/&quot;&gt;HPOJ&lt;/a&gt;
+    low-level driver together with its &lt;a
+    href=&quot;http://panda.mostang.com/sane/&quot;&gt;SANE&lt;/a&gt;
+    backend &quot;hpoj&quot;.&lt;p&gt;
+
+    Copying works fine from the front panel.
+    </en>
+  </comments>
+</printer>
+
