@@ -1,3 +1,8 @@
+2002-10-24  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* db/source/printer/HP-OfficeJet_R40.xml: Added the HP OfficeJet
+	  R40.
+
 2002-10-23  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* db/source/opt/183.xml: Fixed default of "Binding" PJL option. it
